about section spacing issues fixed and font styling added to titles:

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -25,10 +25,16 @@
 }
 
 .img {
-	height: 15rem;
-	width: 15rem;
+	height: 19rem;
+	width: 19rem;
 	border-radius: 100%;
 	margin-right: 2rem;
+	margin-top: 1.5rem;
+}
+
+.contactName {
+	color: var(--accent-color);
+	text-decoration: underline;
 }
 
 .aboutMe {
@@ -40,8 +46,11 @@
 }
 
 .aboutTitle {
+	font-family: 'Inconsolata', monospace;
 	align-items: center;
 	margin-bottom: 2rem;
+	margin-left: 3.1rem;
+	text-decoration: underline;
 }
 
 .aboutDesc {
@@ -51,8 +60,25 @@
 	justify-content: space-between;
 }
 
+.skillsTitle {
+	font-family: 'Inconsolata', monospace;
+}
+
 .skills {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	margin-left: -4rem;
+}
+
+.skillsList {
 	list-style: none;
+	margin-left: -11rem;
+	padding: 0;
+}
+
+.contact {
+	font-family: 'Inconsolata', monospace;
 }
 
 @media (max-width: 768px) {
@@ -64,23 +90,33 @@
 		font-size: 15px;
 		font-weight: 300;
 	}
-	.aboutTitle {
-		font-family: 'Inconsolata', monospace;
-		font-weight: 200;
-		align-items: center;
-		margin-top: 2.2rem;
-		margin-bottom: 0.8rem;
+
+	.img {
+		height: 15rem;
+		width: 15rem;
+		margin: 0 0 1rem 0;
 	}
 
-	.aboutDesc1 {
-		margin-bottom: 1rem;
+	.aboutMe {
+		max-width: 800px;
 	}
+
+	.aboutTitle {
+		font-weight: 200;
+		align-items: center;
+		margin: 2.2rem 0 0.8rem 0;
+	}
+
 	.aboutDesc {
-		display: flex;
 		padding: 0 0.8rem;
 		flex-direction: column;
-		max-width: 800px;
 		justify-content: center;
 		align-items: center;
+	}
+
+	.skillsList {
+		list-style: none;
+		margin: 0 0 1.3rem -8rem;
+		padding: 0;
 	}
 }
